--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 
 <body>
-	<div class="header">
+	<header class="header">
 		<div class="header-logo">Header Logo</div>
 		<div>
 			<a class="header-link" href="#">header link one</a>
 			<a class="header-link" href="#">header link two</a>
 			<a class="header-link" href="#">header link three</a>
 		</div>
-	</div>
+	</header>
 	<div class="hero">
 		<div class="left-text">
 			<h1 class="hero-text">This website is awesome</h1>
@@ -28,6 +28,24 @@
 	</div>
 	<div class="info">
 		<h2 class="info-title">Some random information.</h2>
+		<div class="images">
+			<div class="image">
+				<img class="info-image">
+				<p class="img-sub">this is some subtext under an illustration or image</p>
+			</div>
+			<div class="image">
+				<img class="info-image">
+				<p class="img-sub">this is some subtext under an illustration or image</p>
+			</div>
+			<div class="image">
+				<img class="info-image">
+				<p class="img-sub">this is some subtext under an illustration or image</p>
+			</div>
+			<div class="image">
+				<img class="info-image">
+				<p class="img-sub">this is some subtext under an illustration or image</p>
+			</div>
+		</div>
 	</div>
 </body>
 
