--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<h1 class="hero-text">This website is awesome</h1>
 			<div class="hero-description">This website has some subtext that goes here under the main title. It's a
 				smaller font ans the color is lower contrast</div>
-			<button>Sign up</button>
+			<button class="hero-button">Sign up</button>
 		</div>
 		<img alt="this is a placeholder for an image" class="hero-image">
 	</div>
@@ -51,6 +51,13 @@
 		<h2 class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up
 			space, or maybe people will actually read it. Who knows? All I know is that it looks nice</h2>
 		<div class="quote-author">-Thor, God of Thunder</div>
+	</div>
+	<div class="call-to-action">
+		<div class="call-text">
+			<h2 class="call-title">Call to action! It's time!</h2>
+			<p class="call-description">Sing up for our product by clicking that button right over there!</p>
+		</div>
+		<button class="call-button">Sign up</button>
 	</div>
 </body>
 
