--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 		</div>
 		<button class="call-button">Sign up</button>
 	</div>
+	<div class="footer">Copyright &copy The odin Project 2021</div>
 </body>
 
 </html>
