Jensify the page

--- a/index.html
+++ b/index.html
@@ -4,62 +4,61 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Landing Page</title>
+	<title>Jens Pleetinckx</title>
 	<link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
 	<header class="header">
-		<div class="header-logo">Header Logo</div>
+		<div class="header-logo">Jens Pleetinckx</div>
 		<div>
-			<a class="header-link" href="#">header link one</a>
-			<a class="header-link" href="#">header link two</a>
-			<a class="header-link" href="#">header link three</a>
+			<a class="header-link" href="#">history</a>
+			<a class="header-link" href="#">news</a>
+			<a class="header-link" href="#">contact</a>
 		</div>
 	</header>
 	<div class="hero">
 		<div class="left-text">
-			<h1 class="hero-text">This website is awesome</h1>
-			<div class="hero-description">This website has some subtext that goes here under the main title. It's a
-				smaller font ans the color is lower contrast</div>
-			<button class="hero-button">Sign up</button>
+			<h1 class="hero-text">Running man</h1>
+			<div class="hero-description">Jens is a living wonder and is commonly referred to as 'running man'. He has
+				won many running matches and is Belgium's #1 runner.</div>
+			<a class="hero-button" href="https://www.atletiek.nu/atleet/profiel/1151383/" target="_blank">Follow him</a>
 		</div>
 		<img alt="this is a placeholder for an image" class="hero-image">
 	</div>
 	<div class="info">
-		<h2 class="info-title">Some random information.</h2>
+		<h2 class="info-title">Jens in numbers</h2>
 		<div class="images">
 			<div class="image">
-				<img class="info-image">
-				<p class="img-sub">this is some subtext under an illustration or image</p>
+				<img class="info-image" src="./images/race.jpg" alt="a photo of a race">
+				<p class="img-sub">He has participated in 13 races</p>
 			</div>
 			<div class="image">
-				<img class="info-image">
-				<p class="img-sub">this is some subtext under an illustration or image</p>
+				<img class="info-image" src="./images/birthday.jpg" alt="a photo of a birthday cake">
+				<p class="img-sub">He is 16 years old</p>
 			</div>
 			<div class="image">
-				<img class="info-image">
-				<p class="img-sub">this is some subtext under an illustration or image</p>
+				<img class="info-image" src="./images/fast.jpg" alt="a photo of a man running fast">
+				<p class="img-sub">His fastest time on 800m is 4:46,91</p>
 			</div>
 			<div class="image">
-				<img class="info-image">
-				<p class="img-sub">this is some subtext under an illustration or image</p>
+				<img class="info-image" src="./images/1500m.jpg" alt="a photo of the start of a 1500m race">
+				<p class="img-sub">His favorite discipline is 1500m</p>
 			</div>
 		</div>
 	</div>
 	<div class="quote">
-		<h2 class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up
-			space, or maybe people will actually read it. Who knows? All I know is that it looks nice</h2>
-		<div class="quote-author">-Thor, God of Thunder</div>
+		<h2 class="quote-text">"If I keep running, my problems won't catch up"</h2>
+		<div class="quote-author">-Jens Pleetinckx</div>
 	</div>
 	<div class="call-to-action">
 		<div class="call-text">
-			<h2 class="call-title">Call to action! It's time!</h2>
-			<p class="call-description">Sing up for our product by clicking that button right over there!</p>
+			<h2 class="call-title">Follow him right now!</h2>
+			<p class="call-description">Follow Jens to never miss his next match</p>
 		</div>
-		<button class="call-button">Sign up</button>
+		<a class="call-button" href="https://www.atletiek.nu/atleet/profiel/1151383/" target="_blank">Follow</a>
 	</div>
-	<div class="footer">Copyright &copy The odin Project 2021</div>
+	<div class="footer">Copyright &copy Toby 2023</div>
 </body>
 
 </html>
