add jens.jpg to index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				won many running matches and is Belgium's #1 runner.</div>
 			<a class="hero-button" href="https://www.atletiek.nu/atleet/profiel/1151383/" target="_blank">Follow him</a>
 		</div>
-		<img alt="this is a placeholder for an image" class="hero-image">
+		<img src=./images/jens.jpg alt="this is a placeholder for an image" class="hero-image">
 	</div>
 	<div class="info">
 		<h2 class="info-title">Jens in numbers</h2>
